# stock-mentions-dashboard

./: index.html  pyproject.toml  requirements.txt
.github/workflows/: daily_job.yml  main.yml
Streamlit/dashboard/: app.py
dashboard/: app.py
data/: config.json  history.csv  targets.csv
data/scripts/: collect_data.py
scr/collectors/: main.py
src/: notifier.py
src/collectors/: main.py
workflows/: daily_job.yml
