[tool.poetry]
name = "stock-mentions-dashboard"
version = "0.1.0"
description = "Stock Mentions and Sentiment Dashboard"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.30.0"
pandas = "^2.1.0"
vadersentiment = "^3.3.2"
plotly = "^5.18.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
